--- a/catalog.html
+++ b/catalog.html
@@ -64,49 +64,49 @@
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$5500</div>
+              <img alt="bike" src="images/items/bearclaw-thunderhawk.jpg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <h3>Bearclaw Thunderhawk</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">TITANIUM/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.4"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF30</span></p>
                 <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$2499</div>
+              <img alt="bike" src="images/items/All-City-Gorilla.jpg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <h3>Gorilla Monsoon</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">STEEL/STEEL</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.4"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">73MM THREADED</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">15 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$2499</div>
+              <img alt="bike" src="images/items/bombtrack-hook.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>Bombtrack Hook EXT</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">STEEL/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.25”</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">T47 THREADED</span></p>
                 <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$1749</div>
+              <img alt="bike" src="images/items/Curve-Kevin-of-Steel.jpg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
-              </div>
-              <button class="button catalog-item__button">ADD TO CART</button>
-            </div>
-            <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
-              <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
+                <h3>Curve Kevin of Steel</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">STEEL/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.2"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">T47</span></p>
                 <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
