--- a/catalog.html
+++ b/catalog.html
@@ -112,10 +112,34 @@
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$3299</div>
+              <img alt="bike" src="images/items/Ibis-Hakka.jpg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
+                <h3>Ibis Hakka MX</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">T47 THREADED</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$2999</div>
+              <img alt="bike" src="images/items/Kona-Libre.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>Kona Libre</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">29 X 2.0" / 27.5 X 2.1"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+              </div>
+              <button class="button catalog-item__button">ADD TO CART</button>
+            </div>
+            <div class="catalog-item">
+              <div class="catalog-item__price">$4199</div>
+              <img alt="bike" src="images/items/Norco-Search-XR.jpg" class="catalog-item__image">
+              <div class="catalog-item__sub-container">
+                <h3>Norco Search XR</h3>
                 <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
                 <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
                 <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
@@ -124,38 +148,14 @@
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$2599</div>
+              <img alt="bike" src="images/items/Rocky-Mountain.jpg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
-              </div>
-              <button class="button catalog-item__button">ADD TO CART</button>
-            </div>
-            <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
-              <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
-              </div>
-              <button class="button catalog-item__button">ADD TO CART</button>
-            </div>
-            <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
-              <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+                <h3>Rocky Mountain Solo</h3>
+                <p class="fs2">FRAME/FORK: <span class="fs2 bold">6061 ALLOY/CARBON</span></p>
+                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.2"</span></p>
+                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">BB386 PRESSFIT</span></p>
+                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">15 X 100MM / 12 X 142MM</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
@@ -165,26 +165,14 @@
           <h1 class="ml10">Accessories</h1>
           <div class="catalog-container">
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$17</div>
+              <img alt="bike" src="images/items/rear-light.jpeg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
-              </div>
-              <button class="button catalog-item__button">ADD TO CART</button>
-            </div>
-            <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
-              <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+                <h3>Bontrager Flare Rear Light</h3>
+                <p class="fs2">BULB TYPE: <span class="fs2 bold">LED</span></p>
+                <p class="fs2">NUMBER OF BULBS: <span class="fs2 bold">3</span></p>
+                <p class="fs2">TAILLIGHT MOUNTING: <span class="fs2 bold">SEAT</span></p>
+                <p class="fs2">BATTERIES: <span class="fs2 bold">2 AAA</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
