--- a/catalog.html
+++ b/catalog.html
@@ -177,14 +177,14 @@
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$99</div>
+              <img alt="bike" src="images/items/Saddlebag.jpeg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+                <h3>Saddlebag Panniers</h3>
+                <p class="fs2">GEAR CAPACITY (L): <span class="fs2 bold">25 LITER</span></p>
+                <p class="fs2">GEAR CAPACITY (cu. in.): <span class="fs2 bold">1,525 CUBIC INCHES</span></p>
+                <p class="fs2">SOLD AS: <span class="fs2 bold">SET</span></p>
+                <p class="fs2">MATERIAL: <span class="fs2 bold">Nylon</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
