--- a/catalog.html
+++ b/catalog.html
@@ -189,14 +189,14 @@
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$68</div>
+              <img alt="bike" src="images/items/tool.jpeg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+                <h3>Adjustable Torque Driver</h3>
+                <p class="fs2">FEATURE: <span class="fs2 bold">HAND-ADJUSTABLE</span></p>
+                <p class="fs2">BEST USE: <span class="fs2 bold">CYCLING</span></p>
+                <p class="fs2">HEX DRIVE SIZE: <span class="fs2 bold">0.25 IN.</span></p>
+                <p class="fs2">WEIGHT: <span class="fs2 bold">12 OUNCES</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
