--- a/catalog.html
+++ b/catalog.html
@@ -201,14 +201,14 @@
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
             <div class="catalog-item">
-              <div class="catalog-item__price">$4400</div>
-              <img alt="bike" src="images/items/3T-Exploro.jpg" class="catalog-item__image">
+              <div class="catalog-item__price">$75</div>
+              <img alt="bike" src="images/items/chain-lock.jpeg" class="catalog-item__image">
               <div class="catalog-item__sub-container">
-                <h3>3T Exploro</h3>
-                <p class="fs2">FRAME/FORK: <span class="fs2 bold">CARBON/CARBON</span></p>
-                <p class="fs2">MAX TIRE SIZE: <span class="fs2 bold">27.5 X 2.1"</span></p>
-                <p class="fs2">BOTTOM BRACKET: <span class="fs2 bold">PF86</span></p>
-                <p class="fs2">DROPOUTS (F/R): <span class="fs2 bold">12 X 100MM / 12 X 142MM</span></p>
+                <h3>Combo Chain Lock</h3>
+                <p class="fs2">LOCK STYLE: <span class="fs2 bold">CHAIN LOCK</span></p>
+                <p class="fs2">LOCK TYPE: <span class="fs2 bold">COMBINATION LOCK</span></p>
+                <p class="fs2">LENGTH: <span class="fs2 bold">35 IN.</span></p>
+                <p class="fs2">MATERIAL: <span class="fs2 bold">MANGANESE STEEL</span></p>
               </div>
               <button class="button catalog-item__button">ADD TO CART</button>
             </div>
