--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vicious Cycles | About</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico" sizes="32x32">
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -49,7 +50,7 @@
     <main class="main">
       <article class="about-article about-article_first-background">
         <div class="about-article__sub-container z1 invert-color">
-          <h1 class="about-article__title">Who are Vicious Cycles?</h1>
+          <h2 class="about-article__title">Who are Vicious Cycles?</h2>
           <p class="about-article__text">
             Vicious Cycles is a local store for bikers.
           </p>
@@ -70,7 +71,7 @@
       </article>
       <article class="about-article">
         <div class="about-article__sub-container">
-          <h1 class="about-article__title">Our Philosophy</h1>
+          <h2 class="about-article__title">Our Philosophy</h2>
           <p class="about-article__text">
             Our philosophy is that when you choose your bike, you should choose it based on the folks who will not only build your bicycle, but also those who will help you get comfortable on the bike, as well as provide service down the road as you need it.
           </p>
@@ -106,7 +107,7 @@
       <article class="about-article">
         <img class="photo" src="images/random_dude.jpg" alt="owner's photo">
         <div class="about-article__sub-container bio">
-          <h1 class="about-article__title">Owner Bio</h1>
+          <h2 class="about-article__title">Owner Bio</h2>
           <p class="about-article__text">
             After spending my whole life on pedals, finishing my degree in mechanical engineering and working for two large companies making bikes I decided to change my priorities in life.
           </p>
@@ -123,7 +124,7 @@
       </article>
       <article class="about-article about-article_second-background">
         <div class="about-article__sub-container z1 invert-color">
-          <h1 class="about-article__title">Who are their customers?</h1>
+          <h2 class="about-article__title">Who are their customers?</h2>
           <p class="about-article__text">
             We cater to clients who want our bikes.
           </p>
@@ -156,7 +157,7 @@
       </article>
       <article class="about-article">
         <div class="about-article__sub-container">
-          <h1 class="about-article__title">About Us</h1>
+          <h2 class="about-article__title">About Us</h2>
           <p class="about-article__text">
             Vicious Cycles Inc is a (your town)-based cycle workshop founded by a few like-minded individuals in late 2010.
           </p>
@@ -211,9 +212,9 @@
           <a class="link" target="_blank" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
           <a class="link" target="_blank" href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
         </section>
-        <section class="copyrights">
+        <div class="copyrights">
           <p class="copyrights__text">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
