--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vicious Cycles | Catalog</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico" sizes="32x32">
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -47,9 +48,8 @@
       </div>
     </header>
     <main class="main">
-      <article>
         <section>
-          <h1 class="ml10">Bikes</h1>
+          <h2 class="ml10">Bikes</h2>
           <div class="catalog-container">
             <div class="catalog-item">
               <div class="catalog-item__price">$4400</div>
@@ -162,7 +162,7 @@
           </div>
         </section>
         <section>
-          <h1 class="ml10">Accessories</h1>
+          <h2 class="ml10">Accessories</h2>
           <div class="catalog-container">
             <div class="catalog-item">
               <div class="catalog-item__price">$17</div>
@@ -214,7 +214,6 @@
             </div>
           </div>
         </section>
-      </article>
     </main>
     <footer class="footer">
       <div class="footer__sub-container">
@@ -231,9 +230,9 @@
           <a class="link" target="_blank" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
           <a class="link" target="_blank" href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
         </section>
-        <section class="copyrights">
+        <div class="copyrights">
           <p class="copyrights__text">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
