--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vicious Cycles | Contacts</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico" sizes="32x32">
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -47,8 +48,8 @@
       </div>
     </header>
     <main class="main">
-      <article class="information-block">
-        <section>
+      <div class="information-block">
+        <div>
           <h2>Hours of operations:</h2>
           <p class="fs2">Monday: <span class="fs2 address">10am-8pm</span></p>
           <p class="fs2">Tuesday: <span class="fs2 address">10am-8pm</span></p>
@@ -57,11 +58,11 @@
           <p class="fs2">Friday: <span class="fs2 address">10am-7pm</span></p>
           <p class="fs2">Saturday: <span class="fs2 address">12am-6pm</span></p>
           <p class="fs2">Sunday: <span class="fs2 address">Closed</span></p>
-        </section>
-        <section>
+        </div>
+        <div>
           <p class="fs2">Address: <span class="fs2 address">123 Main St. Anywhere, NC 27000</span></p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12470.332514741878!2d-78.9164734882152!3d35.487379581137084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1638081262951!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </section>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12470.332514741878!2d-78.9164734882152!3d35.487379581137084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1638081262951!5m2!1sen!2sus" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
         <aside class="contact-form__container">
           <form class="contact-form">
             <h2>Start the conversation</h2>
@@ -79,7 +80,7 @@
             <input class="button" type="submit" value="Submit">
           </form>
         </aside>
-      </article>
+      </div>
     </main>
     <footer class="footer">
       <div class="footer__sub-container">
@@ -96,9 +97,9 @@
           <a class="link" target="_blank" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
           <a class="link" target="_blank" href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
         </section>
-        <section class="copyrights">
+        <div class="copyrights">
           <p class="copyrights__text">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
