--- a/service.html
+++ b/service.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vicious Cycles | Service</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico" sizes="32x32">
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -47,16 +48,16 @@
       </div>
     </header>
     <main class="main">
-      <article class="service-block">
-        <section class="service-block__description mb10">
+      <div class="service-block">
+        <div class="service-block__description mb10">
           <div class="service-block__description__text">
             <h2>Bike Service & Repairs</h2>
             <p class="fs2 mt10">Spirited Cyclist services all major bike brands including Specialized, Cannondale, Trek, Giant, Raleigh, Salsa, Santa Cruz, Canyon, Bianchi, Niner, Fuji, Cervelo, and many more.</p>
             <p class="fs2 mt10">Our dedicated mechanics have years of experience and have been highly trained. We expect nothing but the best and top quality service. Stop by and let us show you how well your bike can ride!</p>
           </div>
           <img alt="repair technician" src="images/bike-service.jpg" class="service-block__description__image"/>
-        </section>
-        <section>
+        </div>
+        <div>
           <div class="service-block__options-block">
             <div class="service-block__options-block__card">
               <div class="service-block__options-block__card__title bc-bronze">Bronze Tune<br>(Just the basic)</div>
@@ -101,8 +102,8 @@
               <div class="service-block__options-block__card__bottom bc-gold"></div>
             </div>
           </div>
-        </section>
-      </article>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <div class="footer__sub-container">
@@ -119,9 +120,9 @@
           <a class="link" target="_blank" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
           <a class="link" target="_blank" href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
         </section>
-        <section class="copyrights">
+        <div class="copyrights">
           <p class="copyrights__text">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
