--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vicious Cycles | Home</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico" sizes="32x32">
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -98,9 +99,9 @@
           <a class="link" target="_blank" href="https://www.centurycycles.com/buyers-guides/bicycle-types-how-to-pick-the-best-bike-for-you-pg9.htm">How to Pick the Best Bike for You</a>
           <a class="link" target="_blank" href="https://www.wikihow.com/Drift-on-a-Bicycle">How to Drift on a Bicycle</a>
         </section>
-        <section class="copyrights">
+        <div class="copyrights">
           <p class="copyrights__text">All site content ©2021 Vicious Cycles, Inc. unless otherwise indicated.</p>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
